Migrate CodeHelpers.nonnull()
Use List.of()/Map.of() instead of ImmutableList/ImmutableMap. The
functionality remains the same.

Change-Id: I39b333d2112c375ba093d6ba972ff206452b549f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>